<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.login.LoginActivity"
    android:launchMode="singleTask">

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="268dp"
        android:layout_height="178dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/email_input_placeholder"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_input_placeholder"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="259dp"
        android:layout_height="207dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout">

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/sign_up_btn_text" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/login_btn_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>